# curly-goggles

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  app.json  babel.config.js  cost_of_npm.py  delete.py  manage.py  package.json  sample.py
accounts/: TransactionSuspense.js  models.py  worksheet.js
accounts/fixtures/: account_services.json  invoice_details.json  invoice_items.json  journal_entry.json  time_entries.json  update_item.json  users_upload.json
accounts/reports/: models.py
application/flask_app/: app.py  blocker.py  config.py  tasks.py
application/push/: app.py  private_key.txt  public_key.txt  sample.py  vapid_private.pem
application/scrapper/: items.py  middlewares.py  pipelines.py  settings.py
chat/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
cloud/: dropbox_cloud.py
core/: check_sqlite3.sh  models.py  validators.py  zip_extractor.py
core/config/: setup.py
core/migrations/: 0001_initial.py  0002_auto_20200730_1402.py
data/: dropbox_storage.py  npm_costs.py  urls.py
docs/scripts/: bundlephobia.rs  home_brew  setup  setup.py
frontend/npm/: babel.config.js  jest.config.js  package.json
gettingstarted/: .settings.py.save  asgi.py  html5security.py  old.settings.py  settings.py  setup_dev  setup_gitlab.sh  urls.py  wsgi.py
kanban_board/: apps.py
misc/: activity_code.json  models.py  usps_shipping.py
nutritional_program/food_nutrition/: Pipfile  README.md  package-lock.json  package.json  pyproject.toml
nutritional_program/food_nutrition/budget/: admin.py
nutritional_program/food_nutrition/budget/fixtures/: init_data.json  vendor_init_data.json
nutritional_program/food_nutrition/budget/migrations/: 0001_initial.py
nutritional_program/food_nutrition/budget/models/: __init__.py  estimates.py  expenses.py  inventories.py  old.py  orders.py  products.py  sales.py  vendors.py
nutritional_program/food_nutrition/client/: main.html  main.jsx
nutritional_program/food_nutrition/food_nutrition/: asgi.py  helpers.py  settings.py  urls.py  wsgi.py
nutritional_program/food_nutrition/imports/api/: links.js
nutritional_program/food_nutrition/imports/ui/: App.jsx  Hello.jsx  Info.jsx
nutritional_program/food_nutrition/private/: flexibilities_for_milk_whole_Grains_sodium.json  meal_pattern_revisions.json  meta_data.json  snack_meals.json  upc_generator.js
nutritional_program/food_nutrition/research/: models.py
nutritional_program/food_nutrition/research/fixtures/: research_init_data.json
nutritional_program/food_nutrition/schedules/: water.py
nutritional_program/food_nutrition/server/: main.js
nutritional_program/food_nutrition/tests/: __init__.py  conftest.py  guide.json  init_data.json  main.js  summation.py  test_summation.py  test_vendors.py
old_py_heroku/: .gitignore  .gitlab-ci.yaml  .prettierrc.toml  Pipfile  README.md  pyproject.toml  tester.py  that.py  usps.py
old_py_heroku/.config/: mongocli.toml
old_py_heroku/accounts/: chapter10.py
old_py_heroku/cloud/proxy_server/: mongodb.py  script.js  test_tornado_coroutines.py
old_py_heroku/data/: cli_ocr.py  general_data_protection_regulations_png_to_txt.txt  icon_metadata.json  mongoose.py  svg_metadata.py
old_py_heroku/frontend/: my_db.py
old_py_heroku/frontend/npm/: codecept.conf.js  jest.config.js  package.json  webpack.config.js
old_py_heroku/frontend/npm/public/: index.html
old_py_heroku/frontend/npm/src/: example.js  nrop.js  tester.html  that.js
old_py_heroku/frontend/npm/src/data/: easydb.js  mongodb_clientside.js
old_py_heroku/frontend/npm/tests/: example_graphql.test.js  example_rest.test.js  gitlab_test.js  mailbox_example.test.js
old_py_heroku/frontend/rust/hello-rust/: .sample.Cargo.toml  Cargo.toml
old_py_heroku/frontend/rust/hello-rust/src/: scraper.rs  task.rs
old_py_heroku/gettingstarted/: admin.py  gitlab_home.html  gitlab_signin.html  settings.py  urls.py
old_py_heroku/gettingstarted/gitlab/: gitlab_com_profile_gpg_keys.txt  gitlab_com_profile_keys.txt  gpg_setup.py  init_gpg_data.json  local_config.toml  sample.py  test_gpg_setup.py
old_py_heroku/hello/: urls.py  views.py
old_py_heroku/hello/templates/: base.html
old_py_heroku/kanban_board/: apps.py
old_py_heroku/scrapper/scrapper/spiders/: gitlab.py
old_py_heroku/snippets/: Pipfile  citator.py  package.json  rethink_db.py
old_py_heroku/snippets/data/: rethink_db.js
old_py_heroku/snippets/deleteme/: manage.py
old_py_heroku/snippets/deleteme/deleteme/: settings.py  urls.py  wsgi.py
old_py_heroku/snippets/my_project/html_stuff/: apps.py
old_py_heroku/snippets/my_project/html_stuff/templates/html_stuff/: file_upload.html  input_mode.html  nondiscrimination.html  signature_modal.js
old_py_heroku/snippets/my_project/my_project/: settings.py  urls.py
old_py_heroku/snippets/university/: README.md  plagarism_checker.py
old_py_heroku/snippets/university/university/: settings.py  urls.py
old_py_heroku/snippets/university/university_venv/: pyvenv.cfg
old_py_heroku/standalone_app/: app.py
old_py_heroku/staticfiles/: staticfiles.json
python-getting-started/: Pipfile  manage.py  scrape
python-getting-started/accounts/: accounts.py  business_rules.json  chart_of_accounts.json
python-getting-started/bipolar_gardener/: Pipfile  api.py  manage.py  peru.yaml
python-getting-started/core/: urls.py  validators.py  views.py
python-getting-started/old/: settings.py  urls.py
python-getting-started/polar_gardener/: asgi.py  settings.py  urls.py  wsgi.py
python-getting-started/price_bot/: scrapy.cfg
python-getting-started/taxes/: 1099.py  data.json  models.py
python-getting-started/templates/: 418.html  index.html
python-getting-started/users/: models.py  signals.py  urls.py  views.py
users/: admin.py  forms.py  models.py  profile.js  signals.py  tasks.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200728_1805.py  0003_auto_20200728_1910.py  0004_auto_20200729_0110.py  0005_auto_20200730_1359.py  0006_auto_20200730_1402.py  0007_auto_20200730_1803.py  0008_auto_20200730_1820.py
(+240 files in other folders)
