# pyproject.toml
#-----------------------------------------------------------------------
# DJANGO 3.1 file paths are CHILD_FOLER_VARIABLE = BASE_DIR / "child_folder" 
#-----------------------------------------------------------------------


#-----------------------------------------------------------------------
# PYTEST
#-----------------------------------------------------------------------
[tool.pytest.ini_options]
	minversion = "6.0"
	addopts = "-ra -q -v --doctest-modules"
	testpaths = [
		"tests",
		"integration",
		]

#-----------------------------------------------------------------------
# Coverage
#-----------------------------------------------------------------------
[tool.coverage.run]
	source = gettingstarted
[tool.coverage.report]
	exclude_lines ="""
		# Have to re-enable the standard pragma
		pragma= "no cover"

		# Don't complain about missing debug-only code:
		def __repr__
		if self\.debug

		# Don't complain if tests don't hit defensive assertion code:
		raise AssertionError
		raise NotImplementedError

		# Don't complain if non-runnable code isn't run:
		if 0:
		if __name__ == .__main__.:
			ignore_errors = True
	"""
[tool.coverate.html]
	directory = coverage_html_report
#-----------------------------------------------------------------------
# BLACK
#-----------------------------------------------------------------------
[tool.black]
	line-length = 88
	target-version = ['py37']
	include = '\.pyi?$'

#-----------------------------------------------------------------------
# ISORT
#-----------------------------------------------------------------------
	
[tool.isort]
	line_length = 99
	multi_line_output = 3
	include_trailing_comma = true

#-----------------------------------------------------------------------
# POETRY /  https://python-poetry.org/docs/pyproject/  
#-----------------------------------------------------------------------

[tool.poetry]
	name = "stevebooks"
	version = "0.1.0"
	description = "Python library for calculating amortizations and generating amortization schedules"

	readme = "README.md"
	authors = ["wearypossum4770 <wearypossum4770@yahoo.com>"]
	inspired-by = ["Ronie Martinez <ronmarti18@gmail.com>"]
	keywords = [
		"amortization"
		]
	classifiers = [
		"Development Status :: 5 - Production/Stable",
		"Topic :: Office/Business :: Financial :: Accounting",
		"Topic :: Scientific/Engineering :: Mathematics",
		"Topic :: Software Development :: Libraries :: Python Modules",
		"Programming Language :: Python :: 3",
		"Programming Language :: Python :: 3.7",
		"Programming Language :: Python :: 3.8",
		]
[tool.poetry.dependencies]
	python = "^3.7"
[tool.poetry.scripts]
[tool.poetry.dev-dependencies]
	pytest = "^5.2"

[build-system]
	requires = ["poetry>=0.12"]
	build-backend = "poetry.masonry.api"

